--- a/html/test2.html
+++ b/html/test2.html
@@ -4,11 +4,141 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>球体</title>
+    <style>
+      body {
+        overflow: hidden;
+      }
+      #app {
+        /*景深*/
+        perspective: 600px;
+      }
+      #box {
+        position: relative;
+        top: 200px;
+        left: 50%;
+        width: 200px;
+        height: 100px;
+        /*3d空间*/
+        transform-style: preserve-3d;
+        /*便于观察*/
+        transform: rotateX(0) rotateY(0);
+        transform-origin: center;
+        /* animation: rotate 10s infinite; */
+      }
+      #box div {
+        position: absolute;
+        width: 100px;
+        height: 200px;
+        border: 1px solid red;
+        transform-origin: center center;
+        /* background-color: black; */
+        /* border-radius: 100%; */
+      }
+      #box div img {
+        width: 100%;
+        height: 100%;
+      }
+      @keyframes rotate {
+        0%,
+        10% {
+          transform: rotateX(65deg) rotateY(45deg);
+        }
+        10%,
+        20% {
+          transform: rotateX(65deg) rotateY(68deg);
+        }
+        20%,
+        30% {
+          transform: rotateX(65deg) rotateY(90deg);
+        }
+        30%,
+        40% {
+          transform: rotateX(65deg) rotateY(113deg);
+        }
+        40%,
+        50% {
+          transform: rotateX(65deg) rotateY(135deg);
+        }
+        50%,
+        60% {
+          transform: rotateX(65deg) rotateY(158deg);
+        }
+        60%,
+        70% {
+          transform: rotateX(65deg) rotateY(180deg);
+        }
+        70%,
+        80% {
+          transform: rotateX(65deg) rotateY(203deg);
+        }
+        80%,
+        90% {
+          transform: rotateX(65deg) rotateY(45deg);
+        }
+      }
+    </style>
   </head>
   <body>
-    <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <script></script>
+    <div id="app">
+      <div id="box">
+        <div v-for="item in 36"><img src="1.webp" /></div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>
+      Math.degrees = function (radians) {
+        return radians * (180 / Math.PI);
+      };
+      new Vue({
+        el: "#app",
+        mounted() {
+          const oDiv = document.querySelectorAll("#box div");
+          const oBox = document.querySelector("#box");
+          for (let i = 0; i < oDiv.length; i++) {
+            oDiv[i].style.transform = `rotateY(${
+              (i + 1) * 10
+            }deg) translateZ(700px)`;
+          }
+          // 角度初始化
+          let RotateY = 0;
+          let RotateX = 0;
+          let flag = false;
+          let old_x = 0;
+          // let old_y = 0;
+          document.addEventListener("mousedown", (e) => {
+            console.log("按下");
+            old_x = e.pageX;
+            // old_y = e.pageY
+            flag = true;
+          });
+          document.addEventListener("mousemove", (e) => {
+            if (flag) {
+              console.log("移动");
+              /**
+               * 新位置减去老位置
+               * 得到鼠标移动的X/Y距离
+               */
+              const _x = e.pageX - old_x;
+              // const _y = e.pageY - old_y;
+
+              /**
+               * 除以70得到需要旋转的角度
+               * 除数越大，鼠标移动后旋转的角度越小，
+               * 相反，除数是1，鼠标轻轻拖动，也会旋转的非常厉害
+               */
+              RotateY += _x / 200;
+              // RotateX += -(_y / 70);
+
+              oBox.style.transform = `rotateX(0deg) rotateY(${RotateY}deg)`;
+            }
+          });
+          document.addEventListener("mouseup", (e) => {
+            flag = false;
+          });
+        },
+        methods: {},
+      });
+    </script>
   </body>
 </html>
