--- a/html/test2.html
+++ b/html/test2.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>球体</title>
     <style>
+      html,
       body {
         overflow: hidden;
+        width: 100%;
+        height: 100%;
       }
       #app {
         /*景深*/
