--- a/html/定位.html
+++ b/html/定位.html
@@ -19,5 +19,14 @@
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+    <script type="module">
+      import { createApp } from "../node_modules/vue/dist/vue.runtime.esm-browser.js";
+      console.log(createApp);
+    </script>
+    <script type="module">
+      console.log(window);
+    </script>
+  </body>
 </html>
