feat： require 中使用组件库， css.js

--- a/html/2.html
+++ b/html/2.html
@@ -10,7 +10,7 @@
         width: 80%;
         height: 50px;
         position: relative;
-        margin: 50px 0 0 20px;
+        margin: 50px auto 20px;
       }
       #progressBar div {
         width: 100%;
@@ -67,6 +67,7 @@
     </style>
   </head>
   <body>
+    <h3><%= test %></h3>
     <div id="progressBar">
       <!-- 进度条 -->
       <div>
