--- a/html/backbone.html
+++ b/html/backbone.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>backbone.js</title>
   </head>
   <body>
     <div id="app"></div>
@@ -16,8 +16,8 @@
         paths: {
           domReady: "lib/require/plugins/domReady-2.0.1",
           jquery: "lib/jquery/jquery-2.1.4",
-          underscore: "lib/underscore/underscore-1.4.2",
-          backbone: "lib/backbone/backbone-0.9.2",
+          underscore: "lib/underscore/underscore",
+          backbone: "lib/backbone/backbone-min",
           text: "lib/require/plugins/text-2.0.3", // 处理引入的html文件
           ui: "lib/amazeui.min",
           css: "lib/css", // 处理css文件
@@ -66,16 +66,16 @@
         const bodyModel = new BodyModel();
         const AppView = B.View.extend({
           el: $("#app"),
-          model: bodyModel,
           template: _.template(_text),
-          initialize: function () {},
+          initialize: function () {
+            this.listenTo(this.model, "change", this.render);
+          },
           events: {
             "click #submit": "submit",
             "click .btn": "openModal",
             "click #view": "view",
           },
           render: function () {
-            console.log(this.model);
             $(this.el).html(
               this.template({
                 title: "hello backbone.js",
@@ -105,16 +105,16 @@
             const inputValue = $("#doc-ipt-email-1").val();
             if (inputValue) {
               const length = Object.keys(this.model.attributes).length;
-              console.log(length);
               this.model.set(length, inputValue);
-              $("#doc-modal-list").append(`
-                  <li><a data-id=${length} href="#">${inputValue}</a><i class="am-icon-close"></i></li>
-                `);
+              // $("#doc-modal-list").append(`
+              //     <li><a data-id=${length} href="#">${inputValue}</a><i class="am-icon-close"></i></li>
+              //   `);
             }
           },
         });
-        const App = new AppView();
-        App.render();
+        const App = new AppView({ model: bodyModel });
+        // App.render();
+        bodyModel.set("name", 12313);
       });
     </script>
   </body>
