--- a/html/backbone.html
+++ b/html/backbone.html
@@ -113,8 +113,8 @@
           },
         });
         const App = new AppView({ model: bodyModel });
-        // App.render();
-        bodyModel.set("name", 12313);
+        App.render();
+        // bodyModel.set("name", 12313);
       });
     </script>
   </body>
